<resources>
    <string name="app_name">FinoBank</string>
    <string name="main_string_talkbank">TalkBank</string>
    <string name="main_actoin_settings">Settings</string>
    <string name="main_action_seach">Seach</string>
    <string name="main_action_edit">Edit</string>
    <string name="main_button_register">Register</string>
    <string name="main_button_login">Log-in</string>
    <string name="main_button_cancel">Cancel</string>
    <string name="main_string_copyright_finotek">Copyright 2017 (c) Finotek Inc. All Rights Reserved</string>
    <string name="main_string_message_input">type a message</string>
    <string name="main_button_send">Send</string>
    <string name="main_string_open_account">Open account</string>
    <string name="main_string_transfer">Transfer</string>
    <string name="main_string_view_account_details">Check account</string>
    <string name="main_string_secured_mirocredit">Secured microcredit</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_button_send_the_conversation_to_e_mail">Send to e-mail</string>
    <string name="main_string_authentication_required">Authentication is required</string>
    <string name="main_string_authentication_succeed">Authentication is succeed</string>
    <string name="dialog_chat_verified_context_data_succeeded">Result of analyzing context data is %1$d.\n Authentication is succeeded.</string>
    <string name="dialog_chat_verified_context_data_failed">Result of analyzing context data is %1$d.\n Authentication is needed.</string>
    <string name="dialog_chat_verified_context_data">Result of analyzing context data is %1$d.\n Authentication is succeeded.</string>
    <string name="dialog_chat_ask_help">Hello %s How may I help you?</string>
    <string name="dialog_button_open_account">Open account</string>
    <string name="dialog_chat_recommandation">Based on the results of %1$s\'s context data analysis, we recommend "TalkBang Smart Account".\n"TalkBang Smart Account" is a product that is used by customers with the same age and consumption patterns as %1$s.\nWould you like to open an account?</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_chat_cancel_opening_bank">Cancel opening bank account.\n What can I do for you?</string>
    <string name="dialog_chat_take_picture_id_card">To open an account, you need to verify yourself with your personal ID card or driver\'s license. Please take a picture of your ID card</string>
    <string name="dialog_string_id_card_type">Verification ID type</string>
    <string name="dialog_string_name">Name</string>
    <string name="dialog_string_id_number">ID numbers</string>
    <string name="dialog_string_date_issued">Date issued</string>
    <string name="dialog_string_license_number">Driver\'s license number</string>
    <string name="dialog_chat_correct_information">Is the above information correct?</string>
    <string name="dialog_chat_id_housed_retake">Re-taking a picture of your ID card</string>
    <string name="dialog_chat_finger_tip_sign">Sign your e-signature in the marked area by using fingertip, not finger nail</string>
    <string name="dialog_chat_open_account_sign_tip">Finally, Sign your registered e-signature in the marked area by using fingertip, not finger nail</string>
    <string name="dialog_chat_open_account_success">You\'ve successfully opened your account. Is there anything else that I can help you with?</string>
    <string name="dialog_chat_anything_help">Is there anything else that I can help you with?</string>
    <string name="dialog_chat_after_transfer_by_ai">Electric rates of %1$s won was transferred. Your current balance is %2$s won.\nAdditionally\nI checked %3$s \'s schedule\nTomorrow is mother\'s birthday.\nTo Mother (010&#8211;9876&#8211;5432)\nWould you like to transfer 1,000,000 won like last year\'s birthday?</string>
    <string name="dialog_chat_after_transfer_to_mother">Mother</string>
    <string name="dialog_chat_electricity_fare">Electric rates</string>
    <string name="dialog_chat_transaction">I analyzed the context data of %1$s, You paid the electricity bill every month on the %3$d th.\nI checked your SMS message. This month\'s bill is %2$s won.\nWould you like to transfer the electricity bill of %2$s won?</string>
    <string name="dialog_chat_transfer_to_someone">Would you like to transfer %2$s won to %1$s(010&#8211;5678&#8211;1234)?</string>
    <string name="dialog_button_transfer_other">Finobank AI Recommendation Transfer</string>
    <string name="dialog_chat_transfer_cancel">Transfer is canceled. How may I help you</string>
    <string name="dialog_string_finger_tip_sign_user_register"> Don\'t use finger nail. Please use finger tip to sing in the marked area.</string>
    <string name="dialog_chat_after_transfer">You\'ve transferred %2$s won to %1$s(010&#8211;5678&#8211;1234). Your current balance is %3$s won. \nIs there anything else that I can help you with?</string>
    <string name="dialog_chat_send_transfer">Transfer %2$s won to\n%1$s (010&#8211;5678&#8211;1234)</string>
    <string name="dialog_button_recent_transaction">Recent Transactions</string>
    <string name="dialog_button_transfer_add">Additional Transfer</string>
    <string name="dialog_chat_someone_recent_transaction">%s\'s recent transaction</string>
    <string name="dialog_string_deposit">+</string>
    <string name="dialog_string_withdrawal">-</string>
    <string name="dialog_string_balance">Balance</string>
    <string name="dialog_button_transfer">Transfer</string>
    <string name="dialog_button_view_more">View more</string>
    <string name="dialog_string_receiver_select">Please select receiver</string>
    <string name="dialog_chat_contact_select">If receiver is not contain on the list, please select new receiver from address book or KakaoTalk</string>
    <string name="dialog_string_amount_transfer">Amount</string>
    <string name="dialog_chat_microedit_cancel">Secured mirocredit is canceld. What can i help you?</string>
    <string name="dialog_string_home_address_type">Type in your home address</string>
    <string name="dialog_chat_loan_amount_type">You may loan up to 50 million won with 2% interest rate.
    please write the ammount of loan you would like to request</string>
    <string name="dialog_string_term_agreement_accept">Accept to terms of agreement</string>
    <string name="dialog_string_mandatory_term_accept">Agree to all required fields</string>
    <string name="dialog_string_loan_service_user_agreement">Loan service user agreement</string>
    <string name="dialog_string_personal_credit_information_access_agreement">Personal credit information access agreement</string>
    <string name="dialog_string_loan_transaction_agreement">Loan transaction agreement</string>
    <string name="dialog_string_contact_information">Contract information and instruction</string>
    <string name="dialog_string_optional_term_agreement">Agree to all optional fields</string>
    <string name="dialog_string_customer_information_agreement">Customer\'s information agreement</string>
    <string name="dialog_chat_agreenment_accepted">Agreement have been accepted</string>
    <string name="dialog_chat_loan_success">Loan has been successfully processed and it has been deposited to your account\n
    is there anything else I can help you with?</string>
    <string name="dialog_chat_string_confirm_message">All Required Agreement is needed.</string>
    <string name="dialog_message_error">An unknown error has occurred! Please try again later.</string>
    <string name="dialog_contact">Contact</string>
    <string name="dialog_message_processing">Your message is being processed right now. Please wait.</string>
    <string name="dialog_string_lack_of_balance">There is not enough balance.\nPlease re-enter the amount that\n"you want to transfer.</string>
    <string name="registration_string_signature">E-signature</string>
    <string name="setting_string_save">Save</string>
    <string name="setting_string_allowed_time">It\'s only activated in allowed time.</string>
    <string name="setting_string_end">End</string>
    <string name="setting_string_start">Start</string>
    <string name="setting_string_time_setting">Time setting</string>
    <string name="setting_string__24hr">24Hour</string>
    <string name="setting_string_context_collect_time_setting">Collect time setting</string>
    <string name="setting_string_one_app_select">Select each app</string>
    <string name="setting_string_all_app_collect">Select all app</string>
    <string name="setting_string_context_app">Context data collect app</string>
    <string name="string_preview">Preview</string>
    <string name="string_save">Save</string>
    <string name="string_transfer">Transfer</string>
    <string name="string_price_unit">Price Unit</string>
    <string name="dialog_string_context_auth">Context authentication (basic)</string>
    <string name="string_send">Send</string>
    <string name="string_setting">Setting</string>
    <string name="string_loan">Loan</string>
    <string name="string_send_email">Send to email</string>
    <string name="string_register_account">Register account</string>
    <string name="string_transfer_money">Transfer</string>
    <string name="string_check_account">Check account</string>
    <string name="string_balance">Balance</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_yes_ready">Yes, I am ready.</string>
    <string name="string_yes_its_ok">Yes, It is OK.</string>
    <string name="string_no_retake">No, Retake again.</string>
    <string name="dialog_string_won">Won</string>
    <string name="setting_string_voice_recognition">Authentication voice</string>
    <string name="setting_string_under">Less</string>
    <string name="setting_string_suspicious_auth">Settings for unexpected situation</string>
    <string name="setting_string_six_digit">Please type six digit PIN code</string>
    <string name="setting_string_secure_keyboard_operating">Operating secured keyboard</string>
    <string name="setting_string_registered_signature_purpose">Registered signature will be used for log-in and personal verification purpose</string>
    <string name="dialog_chat_loan_apply">I\'ve checked your account details and I would like to recommend "Finocation one-day loan". \nYou may request up to 50 million won and 2.0% interest rate. \nDo you want to apply loan?</string>
    <string name="dialog_chat_preview">Preview</string>
    <string name="dialog_chat_save">Save</string>
    <string name="dialog_string_input_message">Please input a message.</string>
    <string name="dialog_chat_recognize_error">If you do not have the menu you want, press \'+\' button to select the menu</string>
    <string name="dialog_chat_receive_email">Do you want to receive a chat contents to your email?</string>
    <string name="dialog_string_email_sent">An email has been sent.</string>
    <string name="dialog_string_email_cancel">Cancel</string>
    <string name="dialog_string_select_receiver">Please select someone who you want to transfer.</string>
    <string name="dialog_chat_send_to">send</string>
    <string name="dialog_button_signature">E-signature</string>
    <string name="dialog_chat_current_balance">Current balance is %1$s</string>
    <string name="dialog_chat_transferred">transferred</string>
    <string name="dialog_chat_transferred_price_unit">won</string>
    <string name="dialog_chat_scenario_is_cancelled">\"%1$s\" has been cancelled,\nProceed to \"%2$s\".</string>
    <string name="setting_string_langauge_select">Select langauge</string>
    <string name="setting_string_korean">Korean</string>
    <string name="setting_string_english">English</string>
    <string name="string_confirm">Confirm</string>
</resources>