<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="23dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank01"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/main_string_open_account"
                        android:textColor="@color/dark_100"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank02"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/main_string_transfer"
                        android:textColor="@color/dark_100"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank03"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/main_string_view_account_details"
                        android:textColor="@color/dark_100"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="23dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/icon4"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank04"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon4"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:singleLine="false"
                        android:text="@string/main_string_secured_mirocredit"
                        android:textColor="@color/dark_100"
                        android:textScaleX="0.95"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon5"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank05"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon5"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/main_action_settings"
                        android:textColor="@color/dark_100"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/icon6"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/icon_stankbank06"/>

                    <finotek.global.dev.chatbot.widget.TalkBankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/icon6"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:text="@string/main_button_send_the_conversation_to_e_mail"
                        android:textAlignment="center"
                        android:textColor="@color/dark_100"
                        android:textSize="@dimen/text_small"
                        app:custom_font="noto_regular"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>